lib/src/compiler/tests/testdata/errors/96.out
error[E022]: unused pattern `$`
 --> line:3:6
  |
3 |      $ = "foo"
  |      ^ this pattern was not used in the condition
  |